[project]
name = "browser"
version = "0.1.0"
description = "MCP Server responsible for exposing tools related to finding and downloading zoning regulations from the web"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.9.0",
    "browser-use>=0.1.40",
    "langchain-openai>=0.3.1",
    "mcp>=1.6.0",
]

[project.scripts]
browser-server = "browser_server.server:main"

[tool.pyright]
include = ["mcp_simple_tool"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]